# MidiEditor

./: CMakeLists.txt  Info.plist.cmake  README.md  midieditor.rc  ressources.cmake  ressources.qrc  version.cmake.in  version.h.in
run_environment/: macos.qss
src/: AtomicQueue.h  Singleton.h  Terminal.cpp  Terminal.h  UpdateManager.cpp  UpdateManager.h  Utils.h  Utils.h.autosave  Variant.h  atomicops.h  call_once.h  main.cpp  main.h  readerwriterqueue.h
src/MidiEvent/: ChannelPressureEvent.cpp  ChannelPressureEvent.h  ControlChangeEvent.cpp  ControlChangeEvent.h  KeyPressureEvent.cpp  KeyPressureEvent.h  KeySignatureEvent.cpp  KeySignatureEvent.h  MidiEvent.cpp  MidiEvent.h  NoteOnEvent.cpp  NoteOnEvent.h  OffEvent.cpp  OffEvent.h  OnEvent.cpp  OnEvent.h  PitchBendEvent.cpp  PitchBendEvent.h  ProgChangeEvent.cpp  ProgChangeEvent.h  RegisteredParameterEvent.cpp  RegisteredParameterEvent.h  SysExEvent.cpp  SysExEvent.h  TempoChangeEvent.cpp  TempoChangeEvent.h  TextEvent.cpp  TextEvent.h  TimeSignatureEvent.cpp  TimeSignatureEvent.h  UnknownEvent.cpp  UnknownEvent.h
src/gba/: MPlayDef.h  MPlayDef.h.inc  MidFix4AgbDialog.cpp  MidFix4AgbDialog.h  MidiFixer.cpp  MidiFixer.h  SappyHelper.cpp  SappyHelper.h
src/gui/: AboutDialog.cpp  AboutDialog.h  AdditionalMidiSettingsWidget.cpp  AdditionalMidiSettingsWidget.h  ChannelListWidget.cpp  ChannelListWidget.h  ClickButton.cpp  ClickButton.h  CrashHandler.cpp  CrashHandler.h  DataEditor.cpp  DataEditor.h  DonateDialog.cpp  DonateDialog.h  EventListWidget.cpp  EventWidget.cpp  EventWidget.h  FileLengthDialog.cpp  FileLengthDialog.h  GraphicObject.cpp  GraphicObject.h  GuiSettingsWidget.cpp  GuiSettingsWidget.h  InstrumentChooser.cpp  InstrumentChooser.h  InterfaceController.cpp  InterfaceController.h  KeyListener.cpp  KeyListener.h  MacGlue.h  MacStuff.h  MacStuff.mm  MainWindow.cpp  MainWindow.h  MatrixWidget.cpp  MatrixWidget.h  MidiSettingsWidget.cpp  MidiSettingsWidget.h  MiscWidget.cpp  MiscWidget.h  (+26 more)
src/midi/: Metronome.cpp  Metronome.h  MidiChannel.cpp  MidiChannel.h  MidiFile.cpp  MidiFile.h  MidiInput.cpp  MidiInput.h  MidiOutput.cpp  MidiOutput.h  MidiPlayer.cpp  MidiPlayer.h  MidiTrack.cpp  MidiTrack.h  PlayerThread.cpp  PlayerThread.h  SenderThread.cpp  SenderThread.h  SingleNotePlayer.cpp
src/midi/rtmidi/: RtMidi.cpp
src/protocol/: Protocol.cpp  Protocol.h  ProtocolEntry.cpp  ProtocolEntry.h  ProtocolItem.cpp  ProtocolItem.h  ProtocolStep.cpp  ProtocolStep.h
src/remote/: RemoteServer.cpp  RemoteServer.h
src/tool/: EditorTool.cpp  EditorTool.h  EraserTool.cpp  EraserTool.h  EventMoveTool.cpp  EventMoveTool.h  EventTool.cpp  EventTool.h  NewNoteTool.cpp  NewNoteTool.h  SelectTool.cpp  SelectTool.h  Selection.cpp  Selection.h  SizeChangeTool.cpp  SizeChangeTool.h  StandardTool.cpp  StandardTool.h  Tool.cpp  Tool.h  ToolButton.cpp  ToolButton.h
